# refmark

./: .diffignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ADDRESS_SPACE_CONTRACT.md  BGB_RETRIEVAL_EXPERIMENT_REPORT.md  CORPUS_EVAL_FLOW.md  CURRENT_BENCHMARK_SNAPSHOT.md  CURRENT_STATE_REVIEW.md  DATA_SMELLS.md  DISCOVERY_ADAPT_LOOP.md  DOCUMENT_PROVENANCE.md  EPHEMERAL_MODE.md  EVAL_TOOL_INTEGRATIONS.md  (+23 more)
refmark_train/: LICENSE  PIPELINES.md  PUBLISH_REVIEW.md  README.md  RESULTS.md  SOURCE_PROVENANCE.md  __init__.py  __main__.py  backends.py  cli.py  diagnostics.py  experiment.py  llm_qa.py  models.py  pull_source_docs.py  pyproject.toml  range_data.py  real_corpus.py  requirements-fetch.txt  requirements.txt  single_doc.py  smoke.py  synthetic.py  verify_publish_artifact.py
refmark_train/data/corporate_refinement_w1_2_broad_smoke/: anchors.jsonl  manifest.json  reformulated.jsonl  train.jsonl  valid.jsonl
refmark_train/data/documentation_full_paragraph_contextual/: manifest.json  reformulated.jsonl  valid.jsonl
refmark_train/data/documentation_full_paragraph_contextual_idf_lean2/: manifest.json  reformulated.jsonl  train.jsonl  valid.jsonl
refmark_train/data/documentation_full_paragraph_random/: anchors.jsonl  manifest.json  reformulated.jsonl  train.jsonl  valid.jsonl
refmark_train/data/documentation_refinement_w1_2_broad_v3/: anchors.jsonl  manifest.json  reformulated.jsonl  train.jsonl  valid.jsonl
refmark_train/runs/: center_width_ensemble_20260424T102842Z_documentation_full_paragraph_random_torchcpu.json  center_width_ensemble_20260424T105016Z_documentation_full_paragraph_contextual_torchcpu.json  center_width_ensemble_20260424T115745Z_documentation_full_paragraph_contextual_idf_lean2_torchcpu.json  refinement_two_model_20260424T081958Z_corporate_refinement_w1_2_broad_smoke_torchcpu.json  refinement_two_model_20260424T083449Z_documentation_refinement_w1_2_broad_v3_torchcpu.json
refmark_train/source_docs/: manifest.json
refmark_train/source_docs/sets/: manifest.json
(+203 files in other folders)
